--- a/AppMvt/Templates/AppMvt/inicio.html
+++ b/AppMvt/Templates/AppMvt/inicio.html
@@ -22,7 +22,8 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="btn btn-primary" href="#signup">Signup</a>
+                <a class="btn btn-primary" href="{% url 'Familia' %}">Familia</a>
             </div>
         </nav>
         <!-- Masthead-->
